[package]
name = "kukai"
version = "0.2.2"
edition = "2021"

[dependencies]
anyhow = "1"
tokio = { version = "1.28", features = ["full"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
rand = "0.8"
arrow = "44"
arrow-ipc = "44"
arrow-flight = "44"
tonic = "0.9"
prost = "0.11"
futures = "0.3"
tokio-stream = "0.1"
bytes = "1"

# Logging
tracing = "0.1"
# We need env-filter feature to use EnvFilter
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Rate limiting
governor = "0.5"

# CLI
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
reqwest = "0.11"
