[package]
name = "kukai"
version = "0.2.2"
edition = "2021"

[dependencies]
anyhow = "1"
tokio = { version = "1.28", features = ["full"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
rand = "0.8"
arrow = "44"
arrow-ipc = "44"
arrow-flight = "44"
tonic = "0.9"
prost = "0.11"
futures = "0.3"
tokio-stream = "0.1"
bytes = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
governor = "0.5"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
async-stream = "0.3"

[dev-dependencies]
